<resources>
    <string name="app_name">DIIScover</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_profesores">Profesores</string>
    <string name="action_settings">Ajustes</string>
    <!-- Strings de Inigo -->
    <string name="title_activity_cuatrimestres">Cuatrimestres</string>
    <string name="sample_text_image">Imagen asignatura</string>
    <string name="sample_text_header">texto</string>
    <string name="sample_text_footer">footer</string>
    <string name="title_activity_listado_grado">Grados y carreras</string>
    <string name="title_activity_asignatura_listado">Asignaturas</string>
    <string name="cuatrimestreSpinner">Cuatrimestre</string>
    <string name="incidencia">Enviar incidencia</string>
    <string name="Desconexion">Salir</string>

    <!-- Strings de IncidenciaActivity -->
    <string name="enviar_incidencia">Enviar incidencia</string>
    <string name="boton_enviar_incidencia">ENVIAR</string>
    <string name="hint_enviar_incidencia">Describe aquí la incidencia...</string>

    <!-- Strings de titulo de Activity -->
    <string name="title_activity_laboratorio_listado_">Laboratorios</string>
    <string name="title_activity_asignatura_pantalla">AsignaturaPantalla</string>
    <string name="title_activity_profesor_lisatdo">Profesores</string>
    <string name="title_activity_inicio">Inicio</string>
    <string name="title_activity_registro">Registro</string>
    <string name="title_activity_profesor_pantalla">Profesor</string>
    <string name="title_activity_perfil">Ayúdanos</string>
    <string name="title_activity_correo_profesor">Correo</string>
    <string name="title_activity_laboratorio_pantalla">laboratorioPantalla</string>

    <!-- Strings de AcercaDeActivity -->
    <string name="titulo_acerca_de">Acerca de DIIScover</string>
    <string name="informacion_diiscover">DIIScover nace en las aulas de Ingeniería Informática
        de la Escuela de Ingeniería y Arquitectura de Zaragoza, para facilitar a los estudiantes
        la búsqueda de información relevante sobre sus estudios y sobre su día a día en la
        universidad.</string>
    <string name="titulo_desarrolladores">Desarrolladores</string>
    <string name="desarrolladores">Íñigo Alonso Ruiz\nJavier Beltrán Jorba\nJorge Cáncer
        Gil\nAlejandro Dieste Cortés</string>
    <string name="titulo_diseñadora">Diseñadora</string>
    <string name="diseñadora">Lara Pancorbo Lambán</string>

</resources>
